--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "start-storybook -p 9001 -c .storybook",
     "build": "rm -rf dist && NODE_ENV=production babel src --out-dir dist",
+    "deploy-storybook": "storybook-to-ghpages",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -34,6 +35,7 @@
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
     "@storybook/react": "^4.0.9",
+    "@storybook/storybook-deployer": "^2.8.1",
     "babel-eslint": "^9.0.0",
     "babel-loader": "^8.0.4",
     "eslint": "^5.9.0",
